# AMSFTP

./: $log  ..gitignore.un~  .gitattributes  .gitignore  AGENTS.md  AMBaseClient.hpp  AMBinding copy.cpp  AMBinding.cpp  AMBindingTools copy.hpp  AMBindingTools(compile_check_version).hpp  AMBindingTools.hpp  AMBindingTools_new.hpp  AMCommonTools.hpp  AMCore copy 2.hpp  AMCore copy.hpp  AMCore.cpp  AMCore.hpp  AMDataClass.hpp  AMEnum.cpp  AMEnum.hpp  AMFTPClient.hpp  AMLocalClient.hpp  AMPath.cpp  AMPath.hpp  AMPath2.cpp  AMPathc.cpp  AMPathc.hpp  AMSFTP.cp310-win_amd64.pyd  AMSFTP.pyi  AMSFTPClient.hpp  AMSFTPWorker.md  CMakeLists copy.txt  CMakeLists.txt  CMakePresets.json  ConsoleCtrlTrigger.cpp  MD_ALL.md  MD_CmdParse.md  MD_Completer.md  MD_Completer_Blueprint.md  MD_Interactive_loop.md  (+67 more)
.history/: .gitignore_20250308002752  .gitignore_20250308002845  .gitignore_20250308002849  .gitignore_20250308002931  AMSFTP_20250224223539.pyi  AMSFTP_20250225225518.pyi  AMSFTP_20250225225531.pyi  AMSFTP_20250225225549.pyi  AMSFTP_20250225225604.pyi  AMSFTP_20250225225608.pyi  AMSFTP_20250225225616.pyi  AMSFTP_20250225225635.pyi  AMSFTP_20250225225647.pyi  AMSFTP_20250305201707.pyi  AMSFTP_20250305201754.pyi  AMSFTP_20250305201806.pyi  AMSFTP_20250305201937.pyi  AMSFTP_20250305201948.pyi  AMSFTP_20250305202017.pyi  AMSFTP_20250305202023.pyi  AMSFTP_20250305202025.pyi  AMSFTP_20250305202032.pyi  AMSFTP_20250305202048.pyi  AMSFTP_20250305202052.pyi  AMSFTP_20250305202101.pyi  AMSFTP_20250305202232.pyi  AMSFTP_20250305202238.pyi  AMSFTP_20250305202246.pyi  AMSFTP_20250305202304.pyi  AMSFTP_20250305202309.pyi  AMSFTP_20250305202325.pyi  AMSFTP_20250305202328.pyi  AMSFTP_20250305202330.pyi  AMSFTP_20250305202400.pyi  AMSFTP_20250305202402.pyi  AMSFTP_20250305202439.pyi  AMSFTP_20250305202442.pyi  AMSFTP_20250305202445.pyi  AMSFTP_20250305202454.pyi  AMSFTP_20250305202514.pyi  (+3419 more)
AMSFTP/: AMData.pyi  AMEnum.pyi  AMFS.pyi  __init__.pyi
AgentRestriction/: agent_rules.md  architecture_rules.md  strcture.md
config/schema/: config.schema.json
dep/: ApplicationAdapters.hpp  ApplicationGateways.cpp  CliConfigSaveWorkflows.hpp  ClientPublicPool.cpp  ConfigBackupUseCase.cpp.dep  ConfigStoreLayoutFactory.cpp  ConfigStoreLayoutFactory.hpp  ConfigWorkflows.cpp.dep  ConfigWorkflows.hpp.dep  FileCommandGateway.dep.cpp  FileCommandGateway.dep.hpp  FileSystemAdapter.cpp  FileSystemAppService.cpp  FileSystemManager.dep.hpp  FileSystemManager.hpp  HostManagerCore.cpp  HostProfileWorkflows.hpp.dep  IsoclineHandle.cpp  IsoclineHandle.hpp  ProgressBar.hpp  Prompt.hpp  PromptApi.cpp  PromptCli.cpp  PromptProfile.cpp  StyleManager.hpp.dep  StyleSettings.cpp  StyleSettings.hpp  TokenTypeAnalyzer.cpp.dep  TransferRuntimePorts.hpp.dep  VarDomainService.cpp.dep  VarWorkflows.cpp  VarWorkflows.hpp  auth.cpp  bugs.md  main.cpp.dep
dep/completion/: CompletionWorkflows.hpp
dep/host/: ConfigBackedHostSnapshotStore.hpp
dep/indicators/: cursor_movement.hpp  display_width.hpp  dynamic_progress.hpp  progress_bar.hpp
dep/runtime/: AppHandle.cpp  CliManagersBootstrap.cpp  ConfigAssembly.cpp  ConfigAssembly.hpp  RuntimeBindings.cpp
dep/terminal/: duty.md  status_record.md  workflow_contract.md
docs/: isocline_structure.md
docs/docs/: README.md
history/: local
include/: AMCLIBind.hpp  AMClientManager.hpp  AMCommonTools.hpp  AMConfigManager.hpp  AMCore.hpp  AMDataClass.hpp  AMEnum.hpp  AMFileSystem.hpp  AMIOCore.hpp  AMLogManager.hpp  AMPath.hpp  AMPromptManager.hpp  AMTransferManager.hpp  layer_responsiblity.md
include/AMBase/: CommonTools.hpp  DataClass.hpp  Enum.hpp  Path.hpp  RustTomlRead.h  cfgffi.h
include/AMCLI/: CLIArg.hpp  CLIBind.hpp  CommandPreprocess.hpp  CommandTree.hpp  CompleteEngine.hpp  CompleteSources.hpp  Completer.hpp  InteractiveLoop.hpp  TokenTypeAnalyzer.hpp
include/AMClient/: AMBaseClient.hpp  AMClientManager.hpp  AMCore.hpp  AMFTPClient.hpp  AMLocalClient.hpp  AMSFTPClient.hpp  Base.hpp  FTP.hpp  IOCore.hpp  Local.hpp  SFTP.hpp
include/AMManager/: Client.hpp  Config.hpp  ConfigStorage.hpp  FileSystem.hpp  Host.hpp  Logger.hpp  Prompt.hpp  Set.hpp  SignalMonitor.hpp  Transfer.hpp  Var.hpp
include/Isocline/: env.h  isocline.h  tty.h
include/application/: README.md
include/base/: AMCliSignalMonitor.hpp  AMCommonTools.hpp  AMDataClass.hpp  AMEnum.hpp
include/bootstrap/: AppHandle.hpp  ClientFactory.hpp  ConfigAssembly.hpp  README.md  SessionHandle.hpp  WF6_STATUS.md  WF7_STATUS.md
include/domain/: README.md
include/foundation/: DataClass.hpp  Enum.hpp  Path.hpp  README.md
include/infrastructure/: Config.hpp  Config.hpp.dep  Logger.hpp  README.md  SignalMonitor.hpp  WF2_STATUS.md
include/interface/: ApplicationAdapters.hpp  CLIArg.hpp  CLIBind.hpp  CommandPreprocess.hpp  CommandTree.hpp  InteractiveLoop.hpp  Prompt.hpp  README.md  TokenTypeAnalyzer.hpp  WF5_STATUS.md
md/: refactor_wf7_blockers.md  refactor_wf7_compatibility_matrix.md  refactor_wf7_context_package.md  refactor_wf7_cutover_schedule.md  refactor_wf7_forwarder_conventions.md  refactor_wf7_legacy_include_snapshot.md  refactor_workflow0_status.md
md/include_migration/: LAYERS.md
resource/: app.rc
src/: AMConfigManager.cpp  AMFileSystem.cpp  AMLogManager.cpp  AMPromptManager.cpp  AMSFTPCli.cpp  AMTransferManager.cpp  bind.cpp  main.cpp
src/Isocline/: attr.c  bbcode.c  bbcode_colors.c  common.c  completions.c  editline.c  editline_completion.c  editline_help.c  editline_history.c  (+7 more)
src/foreign/amsrust/: Cargo.toml  README.md
src/foreign/amsrust/include/: AmsVt.h  RustTomlRead.h
src/foreign/amsrust/src/: lib.rs  toml.rs  vt.rs
src/foreign/tomlread/: Cargo.toml
src/foreign/tomlread/include/: RustTomlRead.h
src/foreign/tomlread/src/: lib.rs
terminal/: status_record.md
test/: isocline_nerd_icon_print_demo.cpp
tomlread/: Cargo.toml
tools/: README.md  application_workflows_test.cpp  check_filesystem_refactor_guards.ps1  check_layers.ps1  check_transfer_boundaries.ps1  check_wf7_cutover.ps1  report_filesystem_compat_usage.ps1  report_legacy_includes.ps1  run_filesystem_refactor_guardrails.ps1
(+624 files in other folders)
