[package]
name = "amsftp_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "amsftp_rust"
crate-type = ["staticlib"]

[dependencies]
alacritty_terminal = "0.25.1"
atomicwrites = "0.4"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"
toml_edit = "0.22"

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
