[package]
name = "rust_toml_read"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_toml_read"
crate-type = ["staticlib"]

[dependencies]
toml_edit = "0.22"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
libc = "0.2"
atomicwrites = "0.4"
alacritty_terminal = "0.25.1"

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
